# kedro-ibis-dataset

./: .gitignore  README.md  pyproject.toml
src/kedro_ibis_dataset/: __init__.py  kedro_ibis_dataset.py
tasks/: build.sh  tag-release.sh
tests/: test_ibis_dataset.py
